Fixed slideshow scrolling on small screens; added style loader dependencies

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -295,7 +295,7 @@ $btn-margin: 106px;
 
   // Slideshow carousel
   @mixin masking-div() {
-    max-width: 90vh;
+    max-width: 85vh;
     margin: auto;
     overflow: hidden;
   }
